--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Uliana Hlushanko-CV</title>
+    <link rel="stylesheet" href="styles.css" type="text/css">
 </head>
 <body>
 <div>
     <p>
-        Uliana here!
+        Hi
     </p>
 </div>
     
