--- a/index.html
+++ b/index.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Uliana Hlushanko-CV</title>
-    <link rel="stylesheet" href="styles.css" type="text/css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Uliana Hlushanko-CV</title>
+  <link rel="stylesheet" href="styles.css" type="text/css">
 </head>
+
 <body>
-<div>
-    <p>
-        Hi
-    </p>
-</div>
-    
+  <header>
+    <h1 class="name">Uliana Hlushanko</h1>
+  </header>
+  <main>
+    <figure>
+      <img class="main-img" src="./assetes/subject-photo.jpg" alt="Photo of Uliana Hlushanko">
+    </figure>
+  </main>
 </body>
 </html>
