--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Uliana Hlushanko-CV</title>
   <link rel="stylesheet" href="styles.css" type="text/css">
+  <link rel="icon" href="">
 </head>
 
 <body>
