--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Uliana Hlushanko-CV</title>
   <link rel="stylesheet" href="styles.css" type="text/css">
-  <link rel="icon" href="">
+  <link rel="icon" href="./assetes/GU_CV_by.png">
 </head>
 
 <body>
   <header>
     <h1 class="name">Uliana Hlushanko</h1>
+    <div class="logo"></div>
   </header>
   <main>
     <figure>
