change information about me

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Uliana Hlushanko-CV</title>
   <link rel="stylesheet" href="styles.css" type="text/css">
-  <link rel="icon" href="./assetes/GU_CV_by.png">
+  <link rel="icon" href="./assetes/GU_CV_vo.png">
 </head>
 
 <body>
@@ -18,6 +18,30 @@
     <figure>
       <img class="main-img" src="./assetes/subject-photo.jpg" alt="Photo of Uliana Hlushanko">
     </figure>
+    <h2>Contact information</h2>
+      <p>E-mail:<a href="https://mail.google.com/mail/u/0/#inbox">uliaglu2007@gmail.com</a></p>
+    <h2>Personal Information</h2>
+      <p>Birthday: August 14, 2007</p>
+      <p>Place of birth:<a href="https://ru.wikipedia.org/wiki/%D0%9C%D0%B8%D0%BD%D1%81%D0%BA">Minsk, Belarus</a></p>
+    <h2>Summary</h2>
+      <p>I want to be a programmer and I enjoy programming!</p>
+      <p>I like knitting, drawing, felting and do something with my own hands.</p>
+      <p>I love playing computer games, e.g. <a
+        href="https://ru.wikipedia.org/wiki/Gothic_(%D1%81%D0%B5%D1%80%D0%B8%D1%8F_%D0%B8%D0%B3%D1%80)">Gotic</a>, <a
+        href="https://ru.wikipedia.org/wiki/Heroes_of_Might_and_Magic_(%D1%81%D0%B5%D1%80%D0%B8%D1%8F_%D0%B8%D0%B3%D1%80)">Heroes
+        of might and magic</a> and <a 
+        href="https://ru.wikipedia.org/wiki/The_Elder_Scrolls_IV:_Oblivion">Oblivion</a>
+      </p>
+      <p>Started programming way with <a
+        href="https://ru.wikipedia.org/wiki/%D0%A1%D0%BA%D1%80%D0%B5%D1%82%D1%87_(%D1%8F%D0%B7%D1%8B%D0%BA_%D0%BF%D1%80%D0%BE%D0%B3%D1%80%D0%B0%D0%BC%D0%BC%D0%B8%D1%80%D0%BE%D0%B2%D0%B0%D0%BD%D0%B8%D1%8F)">Scratch</a>
+      </p>
+    <h2>Skills</h2>
+      <p>Programming: HTML5/CSS3</p>
+      <p>Graphic editors: Adobe Photoshop.</p>
+      <h2>Code Example</h2>
+      <figure>
+        <img src="Screen_1.png">
+      </figure>
   </main>
 </body>
 </html>
