--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
     <h2>Skills:</h2>
       <p>Programming: HTML5/CSS3</p>
       <p>Graphic editors: Adobe Photoshop.</p>
-      <h2>Code Example:</h2>
-        <pre>
+    <h2>Code Example:</h2>
+      <span><pre>
           .logo {
           position: fixed;
           top: 0;
@@ -69,7 +69,18 @@
           .main-img:hover {
             width: 300px;
           } 
-        }</pre>
+        }
+      </pre></span>
+     <h2>Experience:</h2>
+       <p>projects:  <a href="https://scratch.mit.edu/users/Uliaglu/">Uliaglu</a></p>
+     <h2>Education:</h2>
+        <p><a href="https://www.codecademy.com/users/glUliana0447011801/achievements">Codeacademy: Learn HTML, Learn CSS</a></p>
+     <h2>English:</h2>
+        <ul>
+        <li>5 years old studying on the English extra classes</li>
+        <li>2014-present time studying English at school</li>
+        <li>Passed courses " [Codeacademy: Learn HTML, Learn CSS](https://www.codecademy.com/users/glUliana0447011801/achievements)" by myself</li>
+        </ul>   
   </main>
 </body>
 </html>
