--- a/index.html
+++ b/index.html
@@ -10,36 +10,42 @@
 </head>
 
 <body>
-  <header>
+  <header style="display: flex;">
     <h1 class="name">Uliana Hlushanko</h1>
     <div class="logo"></div>
   </header>
   <main>
-    <figure>
-      <img class="main-img" src="./assetes/subject-photo.jpg" alt="Photo of Uliana Hlushanko">
-    </figure>
-    <h2>Personal Information:</h2>
-      <p>Birthday: August 14, 2007</p>
-      <p>Place of birth:<a href="https://ru.wikipedia.org/wiki/%D0%9C%D0%B8%D0%BD%D1%81%D0%BA">Minsk, Belarus</a></p>
-    <h2>Summary:</h2>
-    <ul>  
-      <li>I want to be a programmer and I enjoy programming!</li>
-      <li>I like knitting, drawing, felting and do something with my own hands.</li>
-      <li>I love playing computer games, e.g. <a
-        href="https://ru.wikipedia.org/wiki/Gothic_(%D1%81%D0%B5%D1%80%D0%B8%D1%8F_%D0%B8%D0%B3%D1%80)">Gotic</a>, <a
-        href="https://ru.wikipedia.org/wiki/Heroes_of_Might_and_Magic_(%D1%81%D0%B5%D1%80%D0%B8%D1%8F_%D0%B8%D0%B3%D1%80)">Heroes
-        of might and magic</a> and <a 
-        href="https://ru.wikipedia.org/wiki/The_Elder_Scrolls_IV:_Oblivion">Oblivion</a>
-      </li>
-      <li>Started programming way with <a
-        href="https://ru.wikipedia.org/wiki/%D0%A1%D0%BA%D1%80%D0%B5%D1%82%D1%87_(%D1%8F%D0%B7%D1%8B%D0%BA_%D0%BF%D1%80%D0%BE%D0%B3%D1%80%D0%B0%D0%BC%D0%BC%D0%B8%D1%80%D0%BE%D0%B2%D0%B0%D0%BD%D0%B8%D1%8F)">Scratch</a>
-      </li>
-    </ul>
+    <div style="display: flex;">
+      <div>
+        <figure>
+          <img class="main-img" src="./assetes/subject-photo.jpg" alt="Photo of Uliana Hlushanko">
+        </figure>
+      </div>
+      <div class="about-me">
+        <h2>Personal Information:</h2>
+          <p>Birthday: August 14, 2007</p>
+          <p>Place of birth:<a href="https://ru.wikipedia.org/wiki/%D0%9C%D0%B8%D0%BD%D1%81%D0%BA">Minsk, Belarus</a></p>
+        <h2>Summary:</h2>
+        <ul>  
+          <li>I want to be a programmer and I enjoy programming!</li>
+          <li>I like knitting, drawing, felting and do something with my own hands.</li>
+          <li>I love playing computer games, e.g. <a
+            href="https://ru.wikipedia.org/wiki/Gothic_(%D1%81%D0%B5%D1%80%D0%B8%D1%8F_%D0%B8%D0%B3%D1%80)">Gotic</a>, <a
+            href="https://ru.wikipedia.org/wiki/Heroes_of_Might_and_Magic_(%D1%81%D0%B5%D1%80%D0%B8%D1%8F_%D0%B8%D0%B3%D1%80)">Heroes
+            of might and magic</a> and <a 
+            href="https://ru.wikipedia.org/wiki/The_Elder_Scrolls_IV:_Oblivion">Oblivion</a>
+          </li>
+          <li>Started programming way with <a
+            href="https://ru.wikipedia.org/wiki/%D0%A1%D0%BA%D1%80%D0%B5%D1%82%D1%87_(%D1%8F%D0%B7%D1%8B%D0%BA_%D0%BF%D1%80%D0%BE%D0%B3%D1%80%D0%B0%D0%BC%D0%BC%D0%B8%D1%80%D0%BE%D0%B2%D0%B0%D0%BD%D0%B8%D1%8F)">Scratch</a>
+          </li>
+        </ul>
+      </div>
+    </div>
     <h2>Skills:</h2>
       <p>Programming: HTML5/CSS3</p>
       <p>Graphic editors: Adobe Photoshop.</p>
     <h2>Code Example:</h2>
-      <span><pre>
+      <pre>
           .logo {
           position: fixed;
           top: 0;
@@ -70,7 +76,7 @@
             width: 300px;
           } 
         }
-      </pre></span>
+      </pre>
      <h2>Experience:</h2>
        <p>Scratch projects:  <a href="https://scratch.mit.edu/users/Uliaglu/">Uliaglu</a></p>
      <h2>Education:</h2>
