--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="logo"></div>
   </header>
   <main>
-    <div style="display: flex;">
+    <div class="row">
       <div>
         <figure>
           <img class="main-img" src="./assetes/subject-photo.jpg" alt="Photo of Uliana Hlushanko">
@@ -41,7 +41,7 @@
         </ul>
       </div>
     </div>
-    <h2>Skills:</h2>
+    <div class="second"><h2>Skills:</h2>
       <p>Programming: HTML5/CSS3</p>
       <p>Graphic editors: Adobe Photoshop.</p>
     <h2>Code Example:</h2>
@@ -86,7 +86,7 @@
         <li>5 years old studying on the English extra classes</li>
         <li>2014-present time studying English at school</li>
         <li>Passed courses <a href="https://www.codecademy.com/users/glUliana0447011801/achievements)">Codeacademy: Learn HTML, Learn CSS</a> by myself</li>
-        </ul>   
+        </ul></div>   
   </main>
   <footer>
     <figure>
