--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Uliana Hlushanko-CV</title>
   <link rel="stylesheet" href="styles.css" type="text/css">
-  <link rel="icon" href="./assetes/GU_CV_vo.png">
+  <link rel="icon" href="./assetes/GU_CV_vo_icon.png">
 </head>
 
 <body>
@@ -18,7 +18,7 @@
     <div class="row">
       <div>
         <figure>
-          <img class="main-img" src="./assetes/subject-photo.jpg" alt="Photo of Uliana Hlushanko">
+          <img class="main-img" src="./assetes/photo_of_me.jpg" alt="Photo of Uliana Hlushanko">
         </figure>
       </div>
       <div class="about-me">
@@ -82,7 +82,7 @@
      <h2>Education:</h2>
         <p><a href="https://www.codecademy.com/users/glUliana0447011801/achievements">Codeacademy: Learn HTML, Learn CSS</a></p>
      <h2>English:</h2>
-        <ul>
+        <ul class="ul_2">
         <li>5 years old studying on the English extra classes</li>
         <li>2014-present time studying English at school</li>
         <li>Passed courses <a href="https://www.codecademy.com/users/glUliana0447011801/achievements)">Codeacademy: Learn HTML, Learn CSS</a> by myself</li>
