--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <div class="about-me">
         <h2>Personal Information:</h2>
           <p>Birthday: August 14, 2007</p>
-          <p>Place of birth:<a href="https://ru.wikipedia.org/wiki/%D0%9C%D0%B8%D0%BD%D1%81%D0%BA">Minsk, Belarus</a></p>
+          <p>Place of birth: <a href="https://ru.wikipedia.org/wiki/%D0%9C%D0%B8%D0%BD%D1%81%D0%BA">Minsk, Belarus</a></p>
         <h2>Summary:</h2>
         <ul>  
           <li>I want to be a programmer and I enjoy programming!</li>
@@ -42,10 +42,10 @@
       </div>
     </div>
     <div class="second"><h2>Skills:</h2>
-      <p>Programming: HTML5/CSS3</p>
-      <p>Graphic editors: Adobe Photoshop.</p>
-    <h2>Code Example:</h2>
-      <pre>
+        <p>Programming: HTML5/CSS3</p>
+        <p>Graphic editors: Adobe Photoshop.</p>
+      <h2>Code Example:</h2>
+        <pre>
           .logo {
           position: fixed;
           top: 0;
@@ -76,17 +76,18 @@
             width: 300px;
           } 
         }
-      </pre>
-     <h2>Experience:</h2>
-       <p>Scratch projects:  <a href="https://scratch.mit.edu/users/Uliaglu/">Uliaglu</a></p>
-     <h2>Education:</h2>
-        <p><a href="https://www.codecademy.com/users/glUliana0447011801/achievements">Codeacademy: Learn HTML, Learn CSS</a></p>
-     <h2>English:</h2>
-        <ul class="ul_2">
-        <li>5 years old studying on the English extra classes</li>
-        <li>2014-present time studying English at school</li>
-        <li>Passed courses <a href="https://www.codecademy.com/users/glUliana0447011801/achievements)">Codeacademy: Learn HTML, Learn CSS</a> by myself</li>
-        </ul></div>   
+        </pre>
+      <h2>Experience:</h2>
+        <p>Scratch projects:  <a href="https://scratch.mit.edu/users/Uliaglu/">Uliaglu</a></p>
+      <h2>Education:</h2>
+          <p><a href="https://www.codecademy.com/users/glUliana0447011801/achievements">Codeacademy: Learn HTML, Learn CSS</a></p>
+      <h2>English:</h2>
+          <ul class="ul_2">
+          <li>5 years old studying on the English extra classes</li>
+          <li>2014-present time studying English at school</li>
+          <li>Passed courses <a href="https://www.codecademy.com/users/glUliana0447011801/achievements)">Codeacademy: Learn HTML, Learn CSS</a> by myself</li>
+          </ul>
+    </div>   
   </main>
   <footer>
     <figure>
