change logo, change photos

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <main>
     <div class="top-row">
       <div>
-        <img class="main-img" src="./assetes/photo_of_me.jpg" alt="Photo of Uliana Hlushanko">
+        <img class="main-img" src="./assetes/photo_of_me.png" alt="Photo of Uliana Hlushanko">
       </div>
       <div class="about-me">
         <div class="row">
